# diarize

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  pyproject.toml  render.py  speakers.py  transcribe.py
.github/workflows/: tests.yml
config/: defaults.json
docs/superpowers/plans/: 2026-06-04-split-app-into-modules.md  2026-06-17-swift-diarize.md  2026-06-29-diarize-mcp-server.md
docs/superpowers/specs/: 2026-06-17-swift-diarize-design.md  2026-06-29-diarize-mcp-server-design.md
mcp/: README.md  pyproject.toml  server.py
mcp/tests/: conftest.py  test_backend.py  test_parsing.py  test_tools.py
python/: README.md  app.py  config.py  media.py  pyproject.toml  render.py  speakers.py  transcribe.py
python/tests/: test_app.py  test_config.py  test_media.py  test_render.py  test_speakers.py  test_transcribe.py
swift/: .swiftlint.yml  Package.resolved  Package.swift  README.md
swift/Sources/DiarizeApp/: AppState.swift  CLIInstaller.swift  ContentView.swift  DiarizeAppMain.swift  DropView.swift  ProcessingView.swift  ResultView.swift  SettingsView.swift  SpeakerLabelView.swift
swift/Sources/DiarizeCLI/: ConfigCommand.swift  DiarizeCommand.swift  InteractiveLabeler.swift
swift/Sources/DiarizeKit/: ClaudeGuesser.swift  Config.swift  Diarizer.swift  MediaExtractor.swift  Models.swift  Pipeline.swift  Renderer.swift  SpeakerMapper.swift  Transcriber.swift  VaultExporter.swift
swift/Tests/DiarizeKitTests/: ConfigTests.swift  MediaExtractorTests.swift  OverlapTests.swift  RendererTests.swift  SpeakerMapperTests.swift
swift/scripts/: build-app.sh
