[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarize"
version = "0.1.0"
description = "Pure Python WhisperX diarization to Obsidian markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "whisperx==3.8.*",
  "mlx-whisper>=0.4.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[tool.setuptools]
py-modules = ["app"]
