[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarize-mcp"
version = "0.1.0"
description = "MCP server for the diarize tool"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
pythonpath = ["."]
