[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarize"
version = "0.1.0"
description = "Pure Python WhisperX diarization to Obsidian markdown"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "whisperx==3.8.*",
  "mlx-whisper>=0.4.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "av (>=17.0.1,<18.0.0)",
  "hf_xet",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["app"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
