[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarize"
version = "0.1.0"
description = "Pure Python WhisperX diarization to Obsidian markdown"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "whisperx==3.8.*",
  "mlx-whisper>=0.4.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "av (>=17.0.1,<18.0.0)",
  "hf_xet",
  # Listed explicitly (whisperx already pulls these in transitively) so
  # tool.uv.sources below can actually override where they resolve from -
  # uv only honors source overrides for directly declared dependencies.
  "torch~=2.8.0",
  "torchaudio~=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]

# CUDA-enabled torch/torchaudio on Windows/Linux (the plain PyPI wheels are
# CPU-only there). macOS gets the default PyPI wheels - no CUDA wheels exist
# for it, and mlx-whisper is the preferred backend on Apple Silicon anyway.
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
